--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <h1>Docombine</h1>
     <form>
         <label for="files">Select files:</label>
-        <input type="file" id="document-upload" name="documents" multiple><br><br>
+        <input type="file" id="document-upload" name="documents" accept=".pdf,.doc,.docx,.ppt,.pptx" multiple><br><br>
         <ul id="document-list">
         </ul>
         <input type="submit" value="Combine Documents">
