--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,12 +8,13 @@
 
 <body>
     <h1>Docombine</h1>
+    <p id="error"></p>
     <form>
         <label for="files">Select files:</label>
         <input type="file" id="document-upload" name="documents" accept=".pdf,.doc,.docx,.ppt,.pptx" multiple><br><br>
         <ul id="document-list">
         </ul>
-        <input type="submit" value="Combine Documents">
+        <input id="submit-button" type="submit" value="Combine Documents">
     </form>
 </body>
 
